<resources>
    <string name="app_name">IdealMood</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="init_name_skip">Skip</string>
    <string name="init_name_confirm">Confirm</string>
    <string name="init_name_edit_name">Name</string>
    <string name="init_name_text1">My name is</string>
    <string name="init_name_text2" />

    <string name="title_activity_device_scan">DeviceScanActivity</string>
    <string name="title_activity_device_control">DeviceControlActivity</string>

    <string name="device_address">Device Address</string>
    <string name="device_name">Device Name</string>

    <string name="stress_notification_title">Stress level is high</string>
    <string name="stress_notification_contents">Run app and access solution contents!</string>

    <string name="calender_title">\'s Emotion calender</string>
    <string name="calender_sunday">SUN</string>
    <string name="calender_monday">MON</string>
    <string name="calender_tuesday">TUE</string>
    <string name="calender_wednesday">WED</string>
    <string name="calender_thursday">THU</string>
    <string name="calender_friday">FRI</string>
    <string name="calender_saturday">SAT</string>
    <string name="device_search_nearby">Scan devices nearby</string>

    <string name="calender_item_title">What\'s your emotion today?</string>

    <string name="emotion_title_daily_text">Today\'s stress is less than yesterday~</string>
    <string name="emotion_title_today_angry_count">Emotion Rate</string>
    <string name="emotion_title_today_angry_count_value">-</string>
    <string name="emotion_title_compare_yesterday">Today\'s Rage Time</string>
    <string name="emotion_title_compare_yesterday_value">- min</string>
    <string name="emotion_title_heart_bpm">Heartbeat</string>
    <string name="emotion_1_text">I want to tell you "Good Job." *There There*</string>
    <string name="emotion_2_text">Life cannot always be happy. Cheer up!</string>
    <string name="emotion_3_text">Tomrrow will be better than today.</string>
    <string name="emotion_4_text">Today is a happy day!</string>
    <string name="emotion_5_text">Wow, You feel extremely happy today!</string>
    <string name="emotion_no_text">Please type your emotion~</string>

    <string name="statistics_title">[Analysis Report]</string>
    <string name="statistics_analysis_report_text">Analysis results.</string>
    <string name="deep_breath_title">Breath Deep</string>
    <string name="btn_go_back">← Back</string>

    <string name="emotion_off_measure">Are you sure to stop measure?</string>
    <string name="emotion_on_measure">Are you sure to restart measure?</string>
    <string name="emotion_title_rage_number">%1d</string>
    <string name="emotion_title_rage_time_number">%1d min</string>
    <string name="emotion_title_heart_bpm_number">%1d bpm</string>

    <string name="bottom_navi_solution">Solution</string>
    <string name="bottom_navi_emotion">My Emo</string>
    <string name="bottom_navi_emo_trash">Emo trash</string>

    <string name="solution_meditation_title">Meditation</string>
    <string name="solution_deep_breath_title">Deep breath</string>
    <string name="solution_exercise_title">Exercise</string>
    <string name="solution_dance_title">K-Pop Dance !</string>
    <string name="solution_asmr_title">ASMR</string>
    <string name="solution_rain_title">Rainy Sound</string>
    <string name="solution_ocean_title">Wind wave Sound</string>
    <string name="solution_firewall_title">Firewall Sound</string>
    <string name="solution_classic_title">Listen to Classical Music</string>

    <string name="emo_trash_dialog_title">Write that you want to discard emotion</string>
    <string name="emo_trash_dialog_hint">Insert text...</string>
    <string name="emo_trash_deleted_title">Delete emo trash list</string>
    <string name="meditation_title">Finish meditation</string>
    <string name="meditation_text">Straighten your posture, close your eyes. Empty your mind.</string>

    <string name="drawer_list_device_push">Device / App Push</string>
    <string name="drawer_list_emergency">Emergency Setting</string>
    <string name="drawer_list_app_theme">App Theme</string>
    <string name="drawer_list_logout">Logout</string>
    <string name="drawer_list_settings">Settings</string>
    <string name="temp_user_name">Konkuk Kim</string>

    <string name="emergency_setting_guardian">If heart rate is abnormal, call to guardian</string>
    <string name="emergency_setting_ambulance">If heart rate is abnormal, call ambulance</string>

    <string name="theme_setting_title">App Theme</string>
    <string name="theme_setting_mint">Mint(Default)</string>
    <string name="theme_setting_coral">Coral</string>
    <string name="theme_setting_light_sky_blue">Light Sky Blue</string>
    <string name="theme_setting_gray">Gray</string>

    <string name="emotrash_tip">Swipe to delete a item</string>
    <string name="emotrash_item_title">Emotrash Item Box</string>
    <string name="emotrash_item_contentstitle">CONTENTS</string>
    <string name="emotrash_item_datetitle">DATE</string>

    <string name="music_service_top_bar_title">Playing Solution</string>
    <string name="music_service_top_bar_contents">Tap to run the app</string>

    <string name="statistics_legend1">Stress level</string>
    <string name="statistics_legend2">Average heart rate</string>
    <string name="statistics_total_stress_average">Total Average Stress Value : </string>
    <string name="statistics_7days_stress_average">Average Stress Value last 7 days : </string>
    <string name="statistics_today_stress_rank_first">Today\'s stress is in the Top </string>
    <string name="statistics_today_stress_rank_last">%.</string>
    <string name="statistics_total_rage_time">Total rage time last 6 days : </string>
    <string name="statistics_min">min</string>
    <string name="statistics_recommended_solution_title">Recommended Solution :</string>
    <string name="statistics_recommended_solution_contents">Listening classical music, Meditation</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
</resources>
