<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="DrawerThemeSetting"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/textline2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:text="@string/theme_setting_title"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/themeSettingCloseBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginRight="5dp"
            android:background="@drawable/ic_close_black_24dp"
            android:backgroundTint="#000000" />

    </LinearLayout>

    <Button
        android:id="@+id/defaultBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:text="@string/theme_setting_mint"
        android:backgroundTint="@color/colorAccent"/>

    <Button
        android:id="@+id/coralBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:text="@string/theme_setting_coral"
        android:backgroundTint="@color/CCoral"/>

    <Button
        android:id="@+id/lightSkyBlueBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:text="@string/theme_setting_light_sky_blue"
        android:backgroundTint="@color/CLightSkyBlue"/>

    <Button
        android:id="@+id/grayBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:text="@string/theme_setting_gray"
        android:backgroundTint="@color/CGray"/>

</LinearLayout>