<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarFragment"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginVertical="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/btn_star_big_on" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/calender_title"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/prevMonthBtn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="◀" />
                <TextView
                    android:id="@+id/currMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text=" 2020 6 "
                    android:textSize="20dp"/>
                <Button
                    android:id="@+id/nextMonthBtn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="▶"/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#eaeae9">

            <TextView
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/calender_sunday"
                android:textSize="9sp" />

            <TextView
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/calender_monday"
                android:textSize="9sp" />

            <TextView
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/calender_tuesday"
                android:textSize="9sp" />

            <TextView
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/calender_wednesday"
                android:textSize="9sp" />

            <TextView
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/calender_thursday"
                android:textSize="9sp" />

            <TextView
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/calender_friday"
                android:textSize="9sp" />

            <TextView
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/calender_saturday"
                android:textSize="9sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcyCalendarView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</LinearLayout>