<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmoTrashItemFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/textline3"
        android:orientation="horizontal"
        android:backgroundTint="#BCE6E3"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:text="@string/emotrash_item_title"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/emoItemCloseBtn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginRight="5dp"
            android:background="@drawable/ic_close_black_24dp"
            android:backgroundTint="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/emotrash_item_contentstitle"
            android:background="@drawable/textline"
            android:gravity="center"/>


        <TextView
            android:id="@+id/item_contents"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="20dp"
            android:text="@string/emotrash_item_datetitle"
            android:background="@drawable/textline"
            android:gravity="center"/>

        <TextView
            android:id="@+id/item_day_written"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"/>


    </LinearLayout>


</LinearLayout>